# polkadot-smart-contracts

./: .gitignore  Cargo.toml  Dockerfile  README.md  daosign_eip712.rs  gen-docs.sh  lib.rs  package-lock.json  package.json  swanky.config.json  tsconfig.json
.github/workflows/: build.yml  tests.yaml
.husky/: pre-commit
contracts/app/: Cargo.toml
contracts/app/src/: lib.rs
contracts/daosign_app/: Cargo.toml  lib.rs  rust-toolchain.toml
contracts/daosign_app/src/: lib.rs
contracts/daosign_eip712/: Cargo.toml  lib.rs
contracts/daosign_eip712/src/: lib.rs
contracts/daosign_proof_of_agreement/: Cargo.toml  lib.rs
contracts/daosign_proof_of_authority/: Cargo.toml  lib.rs
contracts/daosign_proof_of_signature/: Cargo.toml  lib.rs
contracts/daosign_types/: Cargo.toml  lib.rs
contracts/flipper/: Cargo.toml
contracts/proofs/: Cargo.toml  lib.rs
contracts/proofs_metadata/: Cargo.toml  lib.rs
contracts/proofs_verification/: Cargo.toml  lib.rs
daosign_app/: Cargo.toml  lib.rs
daosign_eip712/: Cargo.toml  lib.rs
docker/: entrypoint.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/daosign_app/: all.html  index.html
docs/daosign_app/daosign_app/: enum.__ink_EventBase.html  index.html  struct.DAOsignApp.html  struct.DAOsignAppRef.html  struct.NewProofOfAgreement.html  struct.NewProofOfAuthority.html  struct.NewProofOfSignature.html  struct.SignedProofOfAgreement.html  struct.SignedProofOfAgreementMsg.html  struct.SignedProofOfAuthority.html  struct.SignedProofOfAuthorityMsg.html  struct.SignedProofOfSignature.html  struct.SignedProofOfSignatureMsg.html
docs/daosign_eip712/: all.html  index.html
docs/daosign_eip712/daosign_eip712/: index.html  struct.DAOsignEIP712.html  struct.DAOsignEIP712Ref.html  struct.EIP712Domain.html  struct.EIP712ProofOfAgreement.html  struct.EIP712ProofOfAgreementTypes.html  struct.EIP712ProofOfAuthority.html  struct.EIP712ProofOfAuthorityTypes.html  struct.EIP712ProofOfSignature.html  struct.EIP712ProofOfSignatureTypes.html  struct.EIP712PropertyType.html  struct.ProofOfAgreement.html  struct.ProofOfAuthority.html  struct.ProofOfSignature.html  struct.Signer.html
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/ink/codegen/env/: trait.StaticEnv.js
docs/implementors/ink/codegen/event/emit/: trait.EmitEvent.js
docs/implementors/ink/codegen/event/topics/: trait.EventLenTopics.js
docs/implementors/ink/codegen/trait_def/call_builder/: trait.TraitCallBuilder.js
docs/implementors/ink/contract_ref/: trait.ToAccountId.js
docs/implementors/ink/reflect/contract/: trait.ContractName.js
docs/implementors/ink/reflect/dispatch/: trait.ContractConstructorDecoder.js  trait.DispatchableMessageInfo.js
docs/implementors/ink/reflect/event/: trait.ContractEventBase.js
docs/implementors/ink_env/call/create_builder/: trait.ConstructorReturnType.js  trait.FromAccountId.js
docs/implementors/ink_env/contract/: trait.ContractEnv.js
docs/implementors/ink_env/topics/: trait.Topics.js
docs/implementors/ink_storage_traits/layout/: trait.StorageLayout.js
docs/implementors/ink_storage_traits/storage/: trait.StorageKey.js
docs/implementors/parity_scale_codec/codec/: trait.Decode.js  trait.Encode.js
docs/implementors/parity_scale_codec/encode_like/: trait.EncodeLike.js
docs/implementors/scale_info/: trait.TypeInfo.js
docs/src/daosign_app/: lib.rs.html
docs/src/daosign_eip712/: lib.rs.html
generated-docs/daosign_app/daosign_app/: sidebar-items.js  struct.DAOsignAppRef.html  struct.SignedProofOfAgreementMsg.html  struct.SignedProofOfAuthorityMsg.html
generated-docs/daosign_eip712/daosign_eip712/: struct.EIP712ProofOfAuthorityTypes.html  struct.ProofOfAgreement.html
generated-docs/implementors/core/cmp/: trait.Eq.js
generated-docs/implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
generated-docs/implementors/core/fmt/: trait.Debug.js
generated-docs/implementors/core/hash/: trait.Hash.js
generated-docs/implementors/core/marker/: trait.StructuralEq.js  trait.StructuralPartialEq.js
generated-docs/implementors/ink/codegen/dispatch/info/: trait.ContractCallBuilder.js
generated-docs/implementors/ink/codegen/event/topics/: trait.EventLenTopics.js
generated-docs/implementors/ink/reflect/dispatch/: trait.ContractMessageDecoder.js
generated-docs/implementors/ink_env/contract/: trait.ContractReference.js
generated-docs/implementors/ink_storage_traits/storage/: trait.Storable.js
generated-docs/implementors/parity_scale_codec/codec/: trait.Encode.js
tests/: utils.ts
tests/app/: index.test.ts
tests/daosign_app/: index.test.ts
tests/eip712/: index.test.ts
tests/flipper/: index.test.ts
