[package]
name = "daosign_app"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
daosign_eip712 = { path = "../daosign_eip712" }
daosign_proof_of_agreement = { path = "../daosign_proof_of_agreement" }
daosign_proof_of_authority = { path = "../daosign_proof_of_authority" }
daosign_proof_of_signature = { path = "../daosign_proof_of_signature" }

[dev-dependencies]
ink_e2e = { workspace = true }
hex = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
