[package]
name = "daosign_eip712"
version = "1.0.0"
authors = ["Misha Kushka, CIDT <https://consideritdone.tech>"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
hex = { version = "0.4", default-features = false }

[lib]
name = "daosign_eip712"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []