[package]
name = "proofs_verification"
version = "0.1.0"
authors = ["Misha Kushka, CIDT <https://consideritdone.tech>"]
edition = "2021"

[dependencies]
ecdsa = "0.16.8"
hex = "0.4.3"
ink = { version = "4.3.0", default-features = false }
ink_env = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink_env/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []
